@@ -1,5 +1,7 @@
 2000-03-15  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* ntpd/ntp_config.c (getconfig): Move req_keyid generation here.
+
 	* librsaref/Makefile.am (BUILT_SOURCES): Cleanup more nodist_ stuff.
 
 2000-03-14  Harlan Stenn  <stenn@whimsy.udel.edu>
